2001-03-27	0.6.3
		* Added parameter -w to disable vgrabbj's setting of the V4L
		  image size. This is needed for certain cams which do not
		  allow programs to set it. They have to be set at module load
		  time. Reported by St0rm and nate - thanks.

2001-03-26	0.6.2
		* Fixed a bug which may or may not occur due to uninitialized
		  variables for a system call (VIDIOCSWIN). Now, the current
		  values are read from the device first and taken for the
		  SET-call.

2001-02-11	0.6.1
		* Way too many problems with the new autoconf/make dist.
		  I really have to work on quality control here...
		  Sorry folks!
	
2001-02-10	0.6.0
		* More GNU'ification - now using ./ocnfigure to check for
		  required libs and headers. I hope I didn't forget any.
		* timestamp now widely configurable. Chose the following
		  options:
		  Position (one of upper/lower left/right or center
		  FontSize (between 1 and 100, but only 8-25 makes sense :-)
		  Border (how many pixels should be blended besides the text)
		  Blend (0-100) how much of the original image shall be
		   viewable under the timestamp
		* also rewrote the code (more to come) to modularize it more.
		  right now there's just to much code in main{}...

2001-01-29	0.5.2
		* Updated Address of Free Software Foundation, Inc., in
		  several files. No technical changes.

2001-01-06	0.5.1
		* Unfortunately, the timestamper-code was enable by default
		  and there was no chance to stop it without changing the 
		  source. Fixed.
		  Drawback:
		  If you want the timestamper enabled, you have to tell
		  vgrabbj on the command-line!

2000-12-16	0.5.0
		* And another one: freetype was initialized multiple times,
		  posing the risk of segmentation fault. fixed. Code should
		  be pretty clean now (?)
		* Changed sort of CHANGES (newest now on top)

2000-12-12	0.4.4
		* Thanks to Zsolt I fount a little bug - Freetype font was
		  closed even though it even might not have been open.

2000-09-18	0.4.3a