@@ -26,11 +26,11 @@ ac_cv_lib_m_main=${ac_cv_lib_m_main=yes}
 ac_cv_lib_png_main=${ac_cv_lib_png_main=yes}
 ac_cv_lib_ttf_main=${ac_cv_lib_ttf_main=yes}
 ac_cv_lib_z_main=${ac_cv_lib_z_main=yes}
-ac_cv_path_install=${ac_cv_path_install='/usr/bin/install -c'}
+ac_cv_path_install=${ac_cv_path_install=$'/usr/bin/install -c'}
 ac_cv_prog_AWK=${ac_cv_prog_AWK=mawk}
 ac_cv_prog_CC=${ac_cv_prog_CC=gcc}
-ac_cv_prog_CPP=${ac_cv_prog_CPP='gcc -E'}
-ac_cv_prog_LN_S=${ac_cv_prog_LN_S='ln -s'}
+ac_cv_prog_CPP=${ac_cv_prog_CPP=$'gcc -E'}
+ac_cv_prog_LN_S=${ac_cv_prog_LN_S=$'ln -s'}
 ac_cv_prog_cc_cross=${ac_cv_prog_cc_cross=no}
 ac_cv_prog_cc_g=${ac_cv_prog_cc_g=yes}
 ac_cv_prog_cc_works=${ac_cv_prog_cc_works=yes}
