@@ -40,7 +40,7 @@ s%@CFLAGS@%-g -O2%g
 s%@CPPFLAGS@%%g
 s%@CXXFLAGS@%%g
 s%@FFLAGS@%%g
-s%@DEFS@% -DPACKAGE=\"vgrabbj\" -DVERSION=\"0.6.1\" -DHAVE_LIBJPEG=1 -DHAVE_LIBM=1 -DHAVE_LIBPNG=1 -DHAVE_LIBTTF=1 -DHAVE_LIBZ=1 -DSTDC_HEADERS=1 -DHAVE_FCNTL_H=1 -DHAVE_SYS_IOCTL_H=1 -DHAVE_SYSLOG_H=1 -DHAVE_UNISTD_H=1 -DHAVE_LINUX_VIDEODEV_H=1 -DHAVE_PNG_H=1 -DHAVE_JPEGLIB_H=1 -DHAVE_STRFTIME=1 %g
+s%@DEFS@% -DPACKAGE=\"vgrabbj\" -DVERSION=\"0.6.3\" -DHAVE_LIBJPEG=1 -DHAVE_LIBM=1 -DHAVE_LIBPNG=1 -DHAVE_LIBTTF=1 -DHAVE_LIBZ=1 -DSTDC_HEADERS=1 -DHAVE_FCNTL_H=1 -DHAVE_SYS_IOCTL_H=1 -DHAVE_SYSLOG_H=1 -DHAVE_UNISTD_H=1 -DHAVE_LINUX_VIDEODEV_H=1 -DHAVE_PNG_H=1 -DHAVE_JPEGLIB_H=1 -DHAVE_STRFTIME=1 %g
 s%@LDFLAGS@%%g
 s%@LIBS@%-lz -lttf -lpng -lm -ljpeg %g
 s%@exec_prefix@%${prefix}%g
@@ -62,7 +62,7 @@ s%@INSTALL_PROGRAM@%${INSTALL}%g
 s%@INSTALL_SCRIPT@%${INSTALL_PROGRAM}%g
 s%@INSTALL_DATA@%${INSTALL} -m 644%g
 s%@PACKAGE@%vgrabbj%g
-s%@VERSION@%0.6.1%g
+s%@VERSION@%0.6.3%g
 s%@ACLOCAL@%aclocal%g
 s%@AUTOCONF@%autoconf%g
 s%@AUTOMAKE@%automake%g
